// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb fnYKKn"
  type="button"
>
  Button
</button>
`;

exports[`Button renders bold 1`] = `
<button
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb hIHjsH"
  type="button"
>
  Button
</button>
`;

exports[`Button renders padded 1`] = `
<button
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb kIBhZW"
  type="button"
>
  Button
</button>
`;

exports[`Button renders small 1`] = `
<button
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb bxTKRn"
  type="button"
>
  Button
</button>
`;
